# cabal-hsc2hs-bug

./: FULL_OUTPUT.md  README.md  cabal-hsc2hs-bug.cabal
bug/: Main.hs
new-foo/: Foo.hs
src/: HS.hs  HSC.hsc
