name:                cabal-hsc2hs-bug
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nathan Collins
maintainer:          nathan.collins@gmail.com
build-type:          Simple
cabal-version:       >=1.10

flag cabal_flag
  description:         a Cabal flag
  default:             True
  manual:              True

library
  exposed-modules:     HS, HSC
  other-extensions:    CPP
  build-depends:       base
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010

  if flag(cabal_flag)
    cpp-options:         -DCPP_FLAG
    cc-options:          -DCPP_FLAG

executable bug
  main-is:             Main.hs
  hs-source-dirs:      bug
  build-depends:       base, cabal-hsc2hs-bug
  default-language:    Haskell2010
