name:                cabal-hsc2hs-bug
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nathan Collins
maintainer:          nathan.collins@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable bug
  main-is:             Main.hs
  other-modules:       Foo
  hs-source-dirs:      bug
  build-depends:       base
  default-language:    Haskell2010
